unpackaged/main/default/objects/Moment_Scoring_Setting__mdt/Moment_Scoring_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Supports MQL scoring by combining multiple marketing activities into a consolidated signal. Person Grade defines lead/prospect demographic standing related to how closely they match Retool’s target persona. Engagement Band tracks lead/prospect interactions, applying different weights based on activity type, and accounting for interaction recency by reducing scores for dormant leads/prospects.</description>
    <label>Moment Scoring Setting</label>
    <pluralLabel>Moment Scoring Settings</pluralLabel>
</CustomObject>