unpackaged/main/default/objects/Moment_Scoring_Setting__mdt/fields/Calculation__c.field-meta.xml
<CustomField>
    <fullName>Calculation__c</fullName>
    <description>Defines how the score is calculated. For example, max or sum.</description>
    <inlineHelpText>Defines how the score is calculated. For example, max or sum.</inlineHelpText>
    <label>Calculation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Max</fullName>
            </value>
            <value>
                <fullName>Sum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>