unpackaged/main/default/objects/Moment_Scoring_Setting__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Defines if the score for evaluation is &quot;Person Grade&quot; or &quot;Engagement Band&quot;.</description>
    <inlineHelpText>Defines if the score for evaluation is &quot;Person Grade&quot; or &quot;Engagement Band&quot;.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Person Grade</fullName>
            </value>
            <value>
                <fullName>Engagement Band</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>