unpackaged/main/default/objects/Moment_Scoring_Setting__mdt/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>The score assigned when the criteria match.</description>
    <inlineHelpText>The score assigned when the criteria match.</inlineHelpText>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>