unpackaged/main/default/objects/Moment_Scoring_Setting__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The field that will be evaluated (e.g., &quot;Is Target Account&quot;, &quot;Seniority&quot;, &quot;Event&quot;)</description>
    <inlineHelpText>The field that will be evaluated (e.g., &quot;Is Target Account&quot;, &quot;Seniority&quot;, &quot;Event&quot;)</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Demo Reason</fullName>
            </value>
            <value>
                <fullName>Department</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Job Change</fullName>
            </value>
            <value>
                <fullName>Product Engagement</fullName>
            </value>
            <value>
                <fullName>Seniority</fullName>
            </value>
            <value>
                <fullName>Target Account</fullName>
            </value>
            <value>
                <fullName>Vertical Industry Target</fullName>
            </value>
            <value>
                <fullName>Warm Outbound</fullName>
            </value>
            <value>
                <fullName>Website Engagement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>