unpackaged/main/default/objects/Moment_Scoring_Setting__mdt/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Describes the iteration of the score, for example v1, v2, v3. The version is stamped along with the score to the Moment.</description>
    <inlineHelpText>Describes the iteration of the score, for example v1, v2, v3. The version is stamped along with the score to the Moment.</inlineHelpText>
    <label>Version</label>
    <length>4</length>
    <type>Text</type>
</CustomField>